fixed overlapping audio component

--- a/blocks/podcast/podcast.scss
+++ b/blocks/podcast/podcast.scss
@@ -1,20 +1,23 @@
-.podcast{
+.podcast {
   margin-top: 40px;
 
   width: 100%;
 
-  p{
-      text-align: center;
-      font-size: 80%;
-      color: #6c757d;
-      margin: 10px 0;
-      line-height: 1;
+  p {
+    text-align: center;
+    font-size: 80%;
+    color: #6c757d;
+    margin: 10px 0;
+    line-height: 1;
   }
-  .plyr_ms{
-      position: relative !important;
+
+  .plyr_ms {
+    position: relative !important;
+    z-index: 0 !important;
   }
+
 }
 
-.podcast.deep-purple{
+.podcast.deep-purple {
   font-family: "Orbitron-Regular";
 }
